opam-version: "2.0"
name: "posix-time"
version: "1.0.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
homepage: "https://github.com/toots/ocaml-posix-time"
authors: "Romain Beauxis <toots@rastageeks.org>"
bug-reports: "https://github.com/toots/ocaml-posix-time/issues"
dev-repo: "git+https://github.com/toots/ocaml-posix-time.git"
synopsis: "Ctypes bindings to <sys/time.h>"
description: """
This module provides OCaml ctypes bindings to <sys/time.h>
"""
license: "MIT"
depends: [
  "ocaml"
  "dune" {>= "1.10"}
  "ctypes"
  "unix-errno"
]
build: ["dune" "build" "-p" name "-j" jobs]
