(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (name sys_time_stubs)
 (public_name sys-time.stubs)
 (libraries sys-time.types ctypes.stubs))

(rule
 (targets sys_time_generated_types.ml)
 (deps    (:exec ../generator/exec.sh)
          (:gen ../generator/gen_types_c))
 (action  (with-stdout-to %{targets}
            (system "%{exec} %{ocaml-config:system} %{gen}"))))
