(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (name sys_time_types)
 (public_name sys-time.types)
 (libraries sys-time.constants ctypes.stubs))

(rule
 (targets sys_time_generated_constants.ml)
 (action  (with-stdout-to %{targets}
            (run ../generator/gen_constants_c))))
